--- a/about.html
+++ b/about.html
@@ -226,18 +226,6 @@
                                                     <p>Public Relations</p>
                                                 </div>
                                             </div>
-                                            <div class="team-member" style="background-image:url(assets/img/team5.jpg)">
-                                                <div class="content">
-                                                    <h2>Michael Davis</h2>
-                                                    <p>My position in Company</p>
-                                                </div>
-                                            </div>
-                                            <div class="team-member" style="background-image:url(assets/img/team6.jpg)">
-                                                <div class="content">
-                                                    <h2>Jessica Johnson</h2>
-                                                    <p>My position in Company</p>
-                                                </div>
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -247,7 +235,7 @@
                         </div>
                     </div>
                 </section>
-                <!--  Testimonials  -->
+                 <!-- Testimonials 
                 <div class="row padding-onlytop-md">
                     <section id="testimonials">
                         <div class="container">
@@ -277,7 +265,7 @@
                         </div>
                         <div class="parallax container-fluid" data-velocity="-.1" data-fit="100" style="background-image:url(assets/img/parallax.jpg)"></div>
                     </section>
-                </div>
+                </div> -->
                 <!--  Testimonials  -->
                 <!--  Content  -->
                 
