--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1 padding-sm">
-                        <iframe class="responsive-iframe" src="https://drive.google.com/file/d/1LLL_6-mQv6sAKC84NuTGZ823Lfc1Ru5p/preview" allow="autoplay"></iframe>
+                        <iframe class="responsive-iframe" src="https://drive.google.com/file/d/1r-zKi-moa0KIlV6YHWo3nabHc8ISzJlb/preview" allow="autoplay"></iframe>
                         <!-- <iframe class="responsive-iframe" src="" title="YouTube video player" frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
                     </div>
@@ -211,7 +211,7 @@
                                                 <h1 class="big font-white text-center padding-onlytop-md" style="font-size: 24px;"><strong>317%</strong> App Download Increased</h1>
                                             </div>
                                             <div class="col-md-3">
-                                                <h1 class="big font-white text-center padding-onlytop-md" style="font-size: 24px;"><strong>734%</strong> Return On Investments</h1>
+                                                <h1 class="big font-white text-center" style="font-size: 24px; padding-top: 67px;"><strong>734%</strong> Return On Investments</h1>
                                             </div>
                                             <div class="col-md-3">
                                                 <img src="assets/img/kotak2.jpg" alt="">
@@ -262,11 +262,11 @@
                         </div>
                         <div class="works-items border">
                             <div class="one-item design">
+                                <img src="assets/img/work1.JPG" alt="work 1">
                                 <div class="line-1"><i></i></div>
                                 <div class="line-2"><i></i></div>
                                 <div class="line-3"><i></i></div>
                                 <div class="line-4"><i></i></div>
-                                <img src="assets/img/work1.JPG" alt="work 1">
                             </div>
                             <div class="one-item design">
                                 <img src="assets/img/work5.JPG" alt="work 2">
