--- a/index.html
+++ b/index.html
@@ -262,14 +262,14 @@
                         </div>
                         <div class="works-items border">
                             <div class="one-item design">
-                                <img src="assets/img/work1.JPG" alt="work 1">
+                                <img src="assets/img/work1.jpg" alt="work 1">
                                 <div class="line-1"><i></i></div>
                                 <div class="line-2"><i></i></div>
                                 <div class="line-3"><i></i></div>
                                 <div class="line-4"><i></i></div>
                             </div>
                             <div class="one-item design">
-                                <img src="assets/img/work5.JPG" alt="work 2">
+                                <img src="assets/img/work5.jpg" alt="work 2">
                                 <div class="line-1"><i></i></div>
                                 <div class="line-2"><i></i></div>
                                 <div class="line-3"><i></i></div>
@@ -290,14 +290,14 @@
                                 <div class="line-4"><i></i></div>
                             </div>
                             <div class="one-item branding">
-                                <img src="assets/img/work6.JPG" alt="work 7">
+                                <img src="assets/img/work6.jpg" alt="work 7">
                                 <div class="line-1"><i></i></div>
                                 <div class="line-2"><i></i></div>
                                 <div class="line-3"><i></i></div>
                                 <div class="line-4"><i></i></div>
                             </div>
                             <div class="one-item branding">
-                                <img src="assets/img/work8.JPG" alt="work 7">
+                                <img src="assets/img/work8.jpg" alt="work 7">
                                 <div class="line-1"><i></i></div>
                                 <div class="line-2"><i></i></div>
                                 <div class="line-3"><i></i></div>
