--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="container">
                         <div id="logo">
                             <a class="navbar-brand" href="index.html">
-                                <img src="assets/img/logo.png" alt="logo">
+                                <img src="img/logo.png" alt="logo">
                             </a>
                         </div>
                         <div id="navbar">
@@ -194,7 +194,7 @@
                                                 <h1 class="big font-white text-center padding-onlytop-md" style="font-size: 24px;"><strong>1428%</strong> Reach Increased</h1>
                                             </div>
                                             <div class="col-md-6">
-                                                <img src="assets/img/kotak4.png" alt="">
+                                                <img src="img/kotak4.png" alt="">
                                             </div>
                                             <div class="col-md-3">
                                                 <h1 class="big font-white text-center padding-onlytop-md" style="font-size: 24px;"><strong>681%</strong> Enagement Increased</h1>
@@ -202,7 +202,7 @@
                                         </div>
                                         <div class="row padding-onlytop-sm"> 
                                             <div class="col-md-3">
-                                                <img src="assets/img/kotak1.jpg" alt="">
+                                                <img src="img/kotak1.jpg" alt="">
                                             </div>
                                             <div class="col-md-3">
                                                 <h1 class="big font-white text-center padding-onlytop-md" style="font-size: 24px;"><strong>317%</strong> App Download Increased</h1>
@@ -211,7 +211,7 @@
                                                 <h1 class="big font-white text-center" style="font-size: 24px; padding-top: 67px;"><strong>734%</strong> Return On Investments</h1>
                                             </div>
                                             <div class="col-md-3">
-                                                <img src="assets/img/kotak2.jpg" alt="">
+                                                <img src="img/kotak2.jpg" alt="">
                                             </div>
                                         </div>
                                     </div> 
@@ -239,7 +239,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="parallax container-fluid" data-velocity="-.1" data-fit="100" style="background-image:url(assets/img/parallax.jpg)"></div> -->
+                        <!-- <div class="parallax container-fluid" data-velocity="-.1" data-fit="100" style="background-image:url(img/parallax.jpg)"></div> -->
                     </section>
                 </div>
 
@@ -259,56 +259,56 @@
                         </div>
                         <div class="works-items border">
                             <div class="one-item design">
-                                <img src="assets/img/work1.jpg" alt="work 1">
+                                <img src="img/work1.jpg" alt="work 1">
                                 <div class="line-1"><i></i></div>
                                 <div class="line-2"><i></i></div>
                                 <div class="line-3"><i></i></div>
                                 <div class="line-4"><i></i></div>
                             </div>
                             <div class="one-item design">
-                                <img src="assets/img/work5.jpg" alt="work 2">
+                                <img src="img/work5.jpg" alt="work 2">
                                 <div class="line-1"><i></i></div>
                                 <div class="line-2"><i></i></div>
                                 <div class="line-3"><i></i></div>
                                 <div class="line-4"><i></i></div>
                             </div>
                             <div class="one-item branding">
-                                <img src="assets/img/work7.jpg" alt="work 6">
+                                <img src="img/work7.jpg" alt="work 6">
                                 <div class="line-1"><i></i></div>
                                 <div class="line-2"><i></i></div>
                                 <div class="line-3"><i></i></div>
                                 <div class="line-4"><i></i></div>
                             </div>
                             <div class="one-item design">
-                                <img src="assets/img/work3.jpg" alt="work 3">
+                                <img src="img/work3.jpg" alt="work 3">
                                 <div class="line-1"><i></i></div>
                                 <div class="line-2"><i></i></div>
                                 <div class="line-3"><i></i></div>
                                 <div class="line-4"><i></i></div>
                             </div>
                             <div class="one-item branding">
-                                <img src="assets/img/work6.jpg" alt="work 4">
+                                <img src="img/work6.jpg" alt="work 4">
                                 <div class="line-1"><i></i></div>
                                 <div class="line-2"><i></i></div>
                                 <div class="line-3"><i></i></div>
                                 <div class="line-4"><i></i></div>
                             </div>
                             <div class="one-item branding">
-                                <img src="assets/img/work8.jpg" alt="work 7">
+                                <img src="img/work8.jpg" alt="work 7">
                                 <div class="line-1"><i></i></div>
                                 <div class="line-2"><i></i></div>
                                 <div class="line-3"><i></i></div>
                                 <div class="line-4"><i></i></div>
                             </div>
                             <div class="one-item design">
-                                <img src="assets/img/work2.jpg" alt="work 5">
+                                <img src="img/work2.jpg" alt="work 5">
                                 <div class="line-1"><i></i></div>
                                 <div class="line-2"><i></i></div>
                                 <div class="line-3"><i></i></div>
                                 <div class="line-4"><i></i></div>
                             </div>
                             <div class="one-item branding">
-                                <img src="assets/img/work9.JPG" alt="work 8">
+                                <img src="img/work9.JPG" alt="work 8">
                                 <div class="line-1"><i></i></div>
                                 <div class="line-2"><i></i></div>
                                 <div class="line-3"><i></i></div>
@@ -325,28 +325,28 @@
                         <div class="row">
                             <div class="col-md-12 sponsor-carousel">
                                 <div class="item my-auto">
-                                    <img src="assets/img/logo1.jpg" alt="client logo">
+                                    <img src="img/logo1.jpg" alt="client logo">
                                 </div>
                                 <div class="item my-auto">
-                                    <img src="assets/img/logo2.jpg" alt="client logo">
+                                    <img src="img/logo2.jpg" alt="client logo">
                                 </div>
                                 <div class="item my-auto">
-                                    <img src="assets/img/logo3.png" alt="client logo">
+                                    <img src="img/logo3.png" alt="client logo">
                                 </div>
                                 <div class="item my-auto">
-                                    <img src="assets/img/logo4.png" alt="client logo">
+                                    <img src="img/logo4.png" alt="client logo">
                                 </div>
                                 <div class="item my-auto">
-                                    <img src="assets/img/logo5.png" alt="client logo">
+                                    <img src="img/logo5.png" alt="client logo">
                                 </div>
                                 <div class="item my-auto">
-                                    <img src="assets/img/logo6.png" alt="client logo">
+                                    <img src="img/logo6.png" alt="client logo">
                                 </div>
                                 <div class="item my-auto">
-                                    <img src="assets/img/logo7.png" alt="client logo">
+                                    <img src="img/logo7.png" alt="client logo">
                                 </div>
                                 <div class="item my-auto">
-                                    <img src="assets/img/logo8.png" alt="client logo">
+                                    <img src="img/logo8.png" alt="client logo">
                                 </div>
                             </div>
                         </div>
