--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                     <div class="container">
                         <div id="logo">
                             <a class="navbar-brand" href="index.html">
-                                <img src="assets/img/logo.png" alt="logo">
+                                <img src="img/logo.png" alt="logo">
                             </a>
                         </div>
                         <div id="navbar">
