--- a/index.html
+++ b/index.html
@@ -287,14 +287,14 @@
                                 <div class="line-4"><i></i></div>
                             </div>
                             <div class="one-item branding">
-                                <img src="img/work6.jpg" alt="work 4">
+                                <img src="img/work6.JPG" alt="work 4">
                                 <div class="line-1"><i></i></div>
                                 <div class="line-2"><i></i></div>
                                 <div class="line-3"><i></i></div>
                                 <div class="line-4"><i></i></div>
                             </div>
                             <div class="one-item branding">
-                                <img src="img/work8.jpg" alt="work 7">
+                                <img src="img/work8.JPG" alt="work 7">
                                 <div class="line-1"><i></i></div>
                                 <div class="line-2"><i></i></div>
                                 <div class="line-3"><i></i></div>
